[package]
name = "ratatui-calloop"
description = "A small library for building calloop EventLoop based Ratatui applications"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/ratatui-calloop"
authors = ["Joshka"]
categories = ["command-line-interface", "gui"]
keywords = ["cli", "console", "ratatui", "terminal", "tui"]

[dependencies]
# this fork uses tracing instead of log
calloop = { version = "0.14.0", git = "https://github.com/joshka/calloop.git", branch = "master" }
color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = "0.27.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
