[package]
name = "ratatui-calloop"
description = "A small library for building calloop EventLoop based Ratatui applications"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/ratatui-calloop"
authors = ["Joshka"]
categories = ["command-line-interface", "gui"]
keywords = ["cli", "console", "ratatui", "terminal", "tui"]

[features]
default = ["color-eyre"]

## Installs [color-eyre] panic and error hooks during terminal initialization to provide better
## error messages and backtraces. This feature is optional and can be disabled if you don't want
## to use it.
##
## [color-eyre]: https://docs.rs/color-eyre
color-eyre = ["dep:color-eyre"]

[dependencies]
calloop = { version = "0.14.3" }
color-eyre = { version = "0.6.3", optional = true }
document-features = "0.2.10"
ratatui = { version = "0.29.0", features = ["crossterm"] }
thiserror = "2.0.11"
